# frozen

./: README.md
CSVSquash/: .gitignore  CHANGES.md  CSVSquash.cabal  CSVSquash.hs  README.md
CSVSquash/_git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  sourcetreeconfig
CSVSquash/_git/logs/: HEAD
CSVSquash/_git/logs/refs/remotes/origin/: HEAD  master
CSVSquash/_git/objects/pack/: pack-725ea030c9c798331eaa27998ea2d48e00ad19d6.idx  pack-725ea030c9c798331eaa27998ea2d48e00ad19d6.pack
CSVSquash/_git/refs/remotes/origin/: master
CSVSquash/testData/: EndemicAnimalsTW.csv  WildlifeTW.csv
JDSL/: README.md  pom.xml
JDSL/_git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  sourcetreeconfig
StinkyTofu/: .gitignore  README.md  StinkyTofu.cabal  jaiyalas_test.hs  problemset  token
StinkyTofu/StinkyTofu/: Utils.hs
StinkyTofu/StinkyTofu/Core/: Evaluator.hs  Hints.hs  Syntax.hs
StinkyTofu/StinkyTofu/Jason/: Generator.hs
StinkyTofu/StinkyTofu/Search/: Simple.hs
StinkyTofu/_git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  sourcetreeconfig
StinkyTofu/_git/logs/: HEAD
StinkyTofu/_git/logs/refs/remotes/origin/: HEAD  master
StinkyTofu/_git/objects/pack/: pack-8ba12a7b4086e117d98a8de8ab4b6409d16160ac.idx  pack-8ba12a7b4086e117d98a8de8ab4b6409d16160ac.pack
StinkyTofu/_git/refs/heads/: master
StinkyTofu/test/: Test.hs
drawbar/: .gitignore  ArgsDef.hs  CHANGES.md  README.md  drawbar.cabal  drawbar.hs
drawbar/_git/: FETCH_HEAD  config  index  packed-refs  sourcetreeconfig
drawbar/_git/logs/: HEAD
drawbar/_git/objects/pack/: pack-f1e296bbb7ad6d0d998dc2e67174a077b86364a5.idx  pack-f1e296bbb7ad6d0d998dc2e67174a077b86364a5.pack
drawbar/_git/refs/heads/: master
drawbar/dataset/: data
drawbar/original/: main.hs
dypro/: .gitignore  README.md  SuperGen.hs  TODO.md
dypro/_git/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  sourcetreeconfig
fruitcan/: README.md  TODO.md
fruitcan/_git/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  sourcetreeconfig
fruitcan/pomegranate/: README.md  TODO.md  beamercolorthemejaifat.sty  beamerfontthemejaifat.sty  beamerinnerthemejaifat.sty  beamerouterthemejaifat.sty  beamerthemejaifat.sty
mulLL/: .gitignore  README.md
(+68 files in other folders)
