Name:		    StinckyTofu
Version:	    0.1
Description:	    ...
Build-Type:	    Simple
stability:          Stable
Cabal-Version:	    >=1.8

Library
  Ghc-options: -O2 -threaded -Wall -fwarn-tabs
  Ghc-prof-options: -prof -auto-all
  Build-Depends:    base >= 3 && < 5
                , random >= 1
  Exposed-modules:
    StinkyTofu.Core.Syntax
    StinkyTofu.Core.Evaluator
    StinkyTofu.Core.Hints
    StinkyTofu.Search.Simple
    StinkyTofu.Utils
    StinkyTofu.Jason.Generator

Test-suite testsuite
  Type: exitcode-stdio-1.0
  Ghc-options: -O2 -threaded -Wall -fwarn-tabs
  Ghc-prof-options: -prof -auto-all
  Hs-source-dirs: test
  Main-is:
    Test.hs
  Build-Depends:
      StinckyTofu
    , base                  >= 3     && < 5
    , random                >= 1
    , HUnit                 >= 1.2   && < 2
    , test-framework        >= 0.6   && < 0.9
    , test-framework-hunit  >= 0.2.7 && < 0.4
